# integration_tests_example

./: .env.dev  .pre-commit-config.yaml  README.md  pyproject.toml
exchange_wallet/: __main__.py  app.py  config.py  di.py  wallet_calculator.py
exchange_wallet/entities/: balance.py
exchange_wallet/exchanges/: bingx.py  di.py
exchange_wallet/interfaces/: exchange_client.py
exchange_wallet/routers/api/: ping.py  router.py  wallet.py
tests/: conftest.py  test_wallet_calculator.py
tests/plugins/: rest.py  stub_exchange_client.py
tests/routers/api/: test_ping.py
