[project]
name = "exchange-wallet-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.6.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "dirty-equals>=0.9.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
]
